--- a/manage_login.html
+++ b/manage_login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Tutor Login - CIS Tutoring Program</title>
+    <title>admin login - CIS Tutoring Program</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
