--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
                 <div class="card-body">
                   <h4 class="card-title">Please select a tutor to start</h4>
-                  <select id='selTutor' class="form-control" style='width: 200px;'>
+                  <select id='selTutor' class="form-control" style='width: auto;'>
                     <option value='0'>Select Tutor</option>
                   </select>                  
                 </div>
@@ -44,7 +44,7 @@
             <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
               <div class="card-body">
                 <h4 class="card-title">Please select the date you want to take the class</h4>
-                <select id='selDate' class="form-control" style='width: 200px;'>
+                <select id='selDate' class="form-control" style='width: auto;'>
                   <option value='0'>Select Date</option>
                 </select>                  
               </div>
@@ -57,9 +57,9 @@
           <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
             <div class="card-body">
               <h4 class="card-title">Please select the time you want to take the class</h4>
-              <select id='selTime' class="form-control" style='width: 200px;'>
+              <select id='selTime' class="form-control" style='width: auto;'>
                 <option value='0'>Select Time</option>
-              </select>                  
+              </select>
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
       <div class="card text-white bg-success" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
         <div class="card-body">
           <h4 class="card-title">All Done!</h4>
-          <h5>Appointment successful! You can close this page</h5>
+          <h5>Appointment successful! You can close this tab</h5>
           <small>If you have any question or need to cancel this class,</small>
           <small>feel free to contact our officer</small>
         </div>
