--- a/manage.html
+++ b/manage.html
@@ -82,7 +82,7 @@
             <div class="card text-white bg-info">
               <div class="card-body">
                 <h4 class="card-title">Tutor Register</h4>
-                <form id="form-register" method="GET">
+                <form id="form-register">
                     <div class="form-group">
                         <label for="username">Username</label>
                         <input type="text" class="form-control" name="username" id="username"
