--- a/manage.html
+++ b/manage.html
@@ -87,11 +87,13 @@
                         <label for="username">Username</label>
                         <input type="text" class="form-control" name="username" id="username"
                             placeholder="Username" required autofocus>
+                            <button type="button" name="randomUsername" id="randomUsername" class="btn btn-primary" btn-lg btn-block">Random Username</button>
                     </div>
                     <div class="form-group">
                         <label for="pass">Password</label>
                         <input type="text" class="form-control" name="pass" id="pass" placeholder="Password"
                             required>
+                            <button type="button" name="randomPassword" id="randomPassword" class="btn btn-primary" btn-lg btn-block">Random Password</button>
                     </div>
                     <div class="form-group">
                         <label for="name">Name</label>
