--- a/manage.html
+++ b/manage.html
@@ -100,6 +100,11 @@
                         <input type="text" class="form-control" name="name" id="name" placeholder="Real Name"
                             required>
                     </div>
+                    <div class="form-group">
+                        <label for="rn">Room Number</label>
+                        <input type="text" class="form-control" name="rn" id="rn" placeholder="Discord Room Number"
+                            required>
+                    </div>
                     <button type="submit" class="btn btn-primary col-12">Register</button>
                 </form>
               </div>
