--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
         <div class="card-body">
           <h4 class="card-title">All Done!</h4>
           <h5>Appointment successful! You can close this tab</h5>
-          <small>If you have any question or need to cancel this class,</small>
-          <small>feel free to contact our officer</small>
+          <small>If you have any question feel free to contact our officer</small>
         </div>
       </div>
     </div>
