--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
           <h4 class="card-title">All Done!</h4>
           <h5>Appointment successful! You can close this tab</h5>
           <small>If you have any question feel free to contact our officer</small>
+          <h3></h3>
+          <a name="addEvent" id="addEvent" class="btn btn-primary" href="#" role="button">Add to Google Calendar</a>
         </div>
       </div>
     </div>
