--- a/tutor_edit.html
+++ b/tutor_edit.html
@@ -63,6 +63,7 @@
           <th scope="col">Start time</th>
           <th scope="col">Tutee</th>
           <th scope="col"></th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody class="listTable"></tbody>
