--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
             <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
               <div class="card-body">
                 <h4 class="card-title">Please select the date you want to take the class</h4>
-                <select id='selDate' class="form-control" style='width: auto;'>
-                  <option value='0'>Select Date</option>
-                </select>                  
+                <input id="selDate" type="text" placeholder="Select Date...">
               </div>
             </div>
           </div>
