--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
               <div class="card-body">
                 <h4 class="card-title">Please select the date you want to take the class</h4>
-                <input id="selDate" type="text" placeholder="Select Date...">
+                <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
               </div>
             </div>
           </div>
