--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container-fluid">
           <h1>Hi, Welcome to the CIS Tutoring Program Class Scheduling System</h1>
             <div class="step1" style="position: relative; top: 15px;">
-              <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
+              <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
                 <div class="card-body">
                   <h4 class="card-title">Please select a tutor to start</h4>
                   <select id='selTutor' class="form-control" style='width: auto;'>
@@ -42,7 +42,7 @@
       </div>
       <div class="container-fluid">
           <div class="step2" style="position: relative; top: 10px; display: none;">
-            <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
+            <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
               <div class="card-body">
                 <h4 class="card-title">Please select the date you want to take the class</h4>
                 <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
@@ -53,7 +53,7 @@
       </div>
       <div class="container-fluid">
         <div class="step3" style="position: relative; top: 10px; display: none;">
-          <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
+          <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
             <div class="card-body">
               <h4 class="card-title">Please select the time you want to take the class</h4>
               <select id='selTime' class="form-control" style='width: auto;'>
@@ -66,7 +66,7 @@
     </div>
     <div class="container-fluid">
       <div class="step4" style="position: relative; top: 10px; display: none;">
-        <div class="card text-white bg-secondary" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
+        <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
           <div class="card-body">
             <h4 class="card-title">Please enter your information</h4>
             <div class="container">
@@ -89,7 +89,7 @@
   </div>
   <div class="container-fluid">
     <div class="step5" style="position: relative; top: 10px; display: none;">
-      <div class="card text-white bg-success" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
+      <div class="card text-white bg-success" style="margin: auto; width: 50%; padding: 10px;">
         <div class="card-body">
           <h4 class="card-title">All Done!</h4>
           <h5>Appointment successful! You can close this tab</h5>
