--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div class="step1" style="position: relative; top: 15px;">
               <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
                 <div class="card-body">
-                  <h4 class="card-title">Please select a tutor to start</h4>
+                  <h4 class="card-title">Please select a Tutor to start</h4>
                   <select id='selTutor' class="form-control" style='width: auto;'>
                     <option value='0'>Select Tutor</option>
-                  </select>                  
+                  </select>
                 </div>
               </div>
             </div>
@@ -44,8 +44,9 @@
           <div class="step2" style="position: relative; top: 10px; display: none;">
             <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
               <div class="card-body">
-                <h4 class="card-title">Please select the date you want to take the class</h4>
+                <h4 class="card-title">Please select a Day</h4>
                 <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
+                <button type="button" class="btn btn-primary prev2">Previous</button>
               </div>
             </div>
           </div>
@@ -55,10 +56,11 @@
         <div class="step3" style="position: relative; top: 10px; display: none;">
           <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
             <div class="card-body">
-              <h4 class="card-title">Please select the time you want to take the class</h4>
+              <h4 class="card-title">Please select a Time</h4>
               <select id='selTime' class="form-control" style='width: auto;'>
                 <option value='0'>Select Time</option>
               </select>
+              <button type="button" class="btn btn-primary prev3">Previous</button>
             </div>
           </div>
         </div>
@@ -79,6 +81,7 @@
                   <label for="email">Email:</label>
                   <input type="email" class="form-control" id="email" placeholder="Enter your email here">
                 </div>
+                <button type="button" class="btn btn-primary prev4">Previous</button>
                 <button type="submit" class="btn btn-primary scheduleClass">Submit</button>
               </form>
             </div>
