--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <div class="card-body">
                 <h4 class="card-title">Please select a Day</h4>
                 <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
-                <button type="button" class="btn btn-primary prev2">Previous</button>
+                <button type="button" class="btn btn-primary prev2" style="position: relative; top: 3px;">Previous</button>
               </div>
             </div>
           </div>
@@ -60,7 +60,7 @@
               <select id='selTime' class="form-control" style='width: auto;'>
                 <option value='0'>Select Time</option>
               </select>
-              <button type="button" class="btn btn-primary prev3">Previous</button>
+              <button type="button" class="btn btn-primary prev3" style="position: relative; top: 3px;">Previous</button>
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
                   <label for="email">Email:</label>
                   <input type="email" class="form-control" id="email" placeholder="Enter your email here">
                 </div>
-                <button type="button" class="btn btn-primary prev4">Previous</button>
+                <button type="button" class="btn btn-primary prev4" style="position: relative; top: 3px;">Previous</button>
                 <button type="submit" class="btn btn-primary scheduleClass">Submit</button>
               </form>
             </div>
