--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container-fluid">
           <h1>Hi, Welcome to the CIS Tutoring Program Class Scheduling System</h1>
             <div class="step1" style="position: relative; top: 15px;">
-              <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
+              <div class="card text-white bg-secondary" style="margin: auto; width: fit-content; padding: 10px;">
                 <div class="card-body">
                   <h4 class="card-title">Please select a Tutor to start</h4>
                   <select id='selTutor' class="form-control" style='width: auto;'>
@@ -42,11 +42,11 @@
       </div>
       <div class="container-fluid">
           <div class="step2" style="position: relative; top: 10px; display: none;">
-            <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
+            <div class="card text-white bg-secondary" style="margin: auto; width: fit-content; padding: 10px;">
               <div class="card-body">
                 <h4 class="card-title">Please select a Day</h4>
                 <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
-                <button type="button" class="btn btn-primary prev2" style="position: relative; top: 3px;">Previous</button>
+                <button type="button" class="btn btn-primary prev2" style="position: relative; top: 8px;">Previous</button>
               </div>
             </div>
           </div>
@@ -54,13 +54,13 @@
       </div>
       <div class="container-fluid">
         <div class="step3" style="position: relative; top: 10px; display: none;">
-          <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
+          <div class="card text-white bg-secondary" style="margin: auto; width: fit-content; padding: 10px;">
             <div class="card-body">
               <h4 class="card-title">Please select a Time</h4>
               <select id='selTime' class="form-control" style='width: auto;'>
                 <option value='0'>Select Time</option>
               </select>
-              <button type="button" class="btn btn-primary prev3" style="position: relative; top: 3px;">Previous</button>
+              <button type="button" class="btn btn-primary prev3" style="position: relative; top: 8px;">Previous</button>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
     </div>
     <div class="container-fluid">
       <div class="step4" style="position: relative; top: 10px; display: none;">
-        <div class="card text-white bg-secondary" style="margin: auto; width: 50%; padding: 10px;">
+        <div class="card text-white bg-secondary" style="margin: auto; width: fit-content; padding: 10px;">
           <div class="card-body">
             <h4 class="card-title">Please enter your information</h4>
             <div class="container">
@@ -81,7 +81,7 @@
                   <label for="email">Email:</label>
                   <input type="email" class="form-control" id="email" placeholder="Enter your email here">
                 </div>
-                <button type="button" class="btn btn-primary prev4" style="position: relative; top: 3px;">Previous</button>
+                <button type="button" class="btn btn-primary prev4" style="position: relative; top: 8px;">Previous</button>
                 <button type="submit" class="btn btn-primary scheduleClass">Submit</button>
               </form>
             </div>
@@ -92,7 +92,7 @@
   </div>
   <div class="container-fluid">
     <div class="step5" style="position: relative; top: 10px; display: none;">
-      <div class="card text-white bg-success" style="margin: auto; width: 50%; padding: 10px;">
+      <div class="card text-white bg-success" style="margin: auto; width: fit-content; padding: 10px;">
         <div class="card-body">
           <h4 class="card-title">All Done!</h4>
           <h5>Appointment successful! You can close this tab</h5>
