--- a/manage.html
+++ b/manage.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <style>
+        hr {
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+            border: 0;
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 
 <body>
@@ -43,35 +52,52 @@
             <input style="width: 300px;" class="dateInput form-control" type="text">
             <table class="table table-striped" style="position: relative; top:15px;">
                 <thead>
-                  <tr>
-                    <th scope="col">Tutor</th>
-                    <th scope="col">Start time</th>
-                    <th scope="col">Tutee</th>
-                  </tr>
+                    <tr>
+                        <th scope="col">Tutor</th>
+                        <th scope="col">Start time</th>
+                        <th scope="col">Tutee</th>
+                    </tr>
                 </thead>
                 <tbody class="listTable"></tbody>
-              </table>
-            </div>
+            </table>
         </div>
+    </div>
     </div>
     <div class="scheduleTab" style="display: none;">
         <div class="container-fluid" style="position: relative; top: 70px;">
+            <h4>General Setting:</h4>
+            <div class="d-flex flex-column" style="margin-top: 20px;">
+                <div class="d-flex justify-content-start">
+                    <p class="text-muted h6 mt-auto pr-2">Enable Scheduling: </p>
+                    <input id="systemToggle" class="form-check-input" type="checkbox" data-toggle="toggle" data-size="sm" checked disabled>
+                </div>
+                <div class="d-flex justify-content-start mt-1">
+                    <p class="text-muted h6 mt-auto pr-2">Custom Unavailable Days: </p>
+                    <input id="cudToggle" class="form-check-input" type="checkbox" data-toggle="toggle" data-size="sm">
+                </div>
+                <div class="d-flex justify-content-start mt-1">
+                    <input style="display: none; margin-left: 30px;" id="disableDate" type="text">
+                </div>
+            </div>
+            <hr />
             <h4>Class Cancellation:</h4>
-            <select id='selTutor' class="form-control" style='width: auto;'>
-                <option value='0'>Select Tutor</option>
-            </select>
-            <select id='selDate' class="form-control" style='width: auto;'>
-                <option value='0'>Select Date</option>
-            </select>
-            <select id='selTime' class="form-control" style='width: auto;'>
-                <option value='0'>Select Time</option>
-            </select>
+            <div class="d-flex justify-content-start">
+                <select id='selTutor' class="form-control" style='width: auto;'>
+                    <option value='0'>Select Tutor</option>
+                </select>
+                <select id='selDate' class="form-control" style='width: auto;'>
+                    <option value='0'>Select Date</option>
+                </select>
+                <select id='selTime' class="form-control" style='width: auto;'>
+                    <option value='0'>Select Time</option>
+                </select>
+            </div>
             <table class="table" style="position: relative; top:15px;">
                 <thead>
-                  <tr>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                  </tr>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
                 </thead>
                 <tbody class="Listtutee"></tbody>
             </table>
@@ -80,34 +106,36 @@
     <div class="userTab" style="display: none;">
         <div class="container-fluid" style="position: relative; top: 70px;">
             <div class="card text-white bg-info">
-              <div class="card-body">
-                <h4 class="card-title">Tutor Register</h4>
-                <form id="form-register">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" name="username" id="username"
-                            placeholder="Username" required autofocus>
-                            <button type="button" name="randomUsername" id="randomUsername" class="btn btn-primary" btn-lg btn-block">Random Username</button>
-                    </div>
-                    <div class="form-group">
-                        <label for="pass">Password</label>
-                        <input type="text" class="form-control" name="pass" id="pass" placeholder="Password"
-                            required>
-                            <button type="button" name="randomPassword" id="randomPassword" class="btn btn-primary" btn-lg btn-block">Random Password</button>
-                    </div>
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" name="name" id="name" placeholder="Real Name"
-                            required>
-                    </div>
-                    <div class="form-group">
-                        <label for="rn">Room Number</label>
-                        <input type="text" class="form-control" name="rn" id="rn" placeholder="Discord Room Number"
-                            required>
-                    </div>
-                    <button type="submit" class="btn btn-primary col-12">Register</button>
-                </form>
-              </div>
+                <div class="card-body">
+                    <h4 class="card-title">Tutor Register</h4>
+                    <form id="form-register">
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" name="username" id="username" placeholder="Username"
+                                required autofocus>
+                            <button type="button" name="randomUsername" id="randomUsername" class="btn btn-primary"
+                                btn-lg btn-block">Random Username</button>
+                        </div>
+                        <div class="form-group">
+                            <label for="pass">Password</label>
+                            <input type="text" class="form-control" name="pass" id="pass" placeholder="Password"
+                                required>
+                            <button type="button" name="randomPassword" id="randomPassword" class="btn btn-primary"
+                                btn-lg btn-block">Random Password</button>
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" name="name" id="name" placeholder="Real Name"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <label for="rn">Room Number</label>
+                            <input type="text" class="form-control" name="rn" id="rn" placeholder="Discord Room Number"
+                                required>
+                        </div>
+                        <button type="submit" class="btn btn-primary col-12">Register</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -116,19 +144,20 @@
             <h4 class="card-title">Tutee List: </h4>
             <table class="table" style="position: relative; top:15px;">
                 <thead>
-                  <tr>
-                    <th scope="col">Tutee Name</th>
-                    <th scope="col">Email</th>
-                  </tr>
+                    <tr>
+                        <th scope="col">Tutee Name</th>
+                        <th scope="col">Email</th>
+                    </tr>
                 </thead>
                 <tbody class="listTutee"></tbody>
-              </table>
-            </div>
+            </table>
         </div>
+    </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
@@ -137,6 +166,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.8.0/dist/av-min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <script src="js/manage.js"></script>
 </body>
 
