--- a/index.html
+++ b/index.html
@@ -1,74 +1,75 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/select2.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="css/scheduler.css">
-  </head>
-  <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="#">CIS TP - Scheduling System</a>
-          <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-              aria-expanded="false" aria-label="Toggle navigation"></button>
-          <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Scheduling<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">Tutor Login</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <div class="container-fluid">
-          <h1>Hi, Welcome to the CIS Tutoring Program Class Scheduling System</h1>
-            <div class="step1" style="position: relative; top: 15px;">
-              <div class="card text-white bg-secondary" style="margin: auto; width: fit-content; padding: 10px;">
-                <div class="card-body">
-                  <h4 class="card-title">Please select a Tutor to start</h4>
-                  <select id='selTutor' class="form-control" style='width: auto;'>
-                    <option value='0'>Select Tutor</option>
-                  </select>
-                </div>
-              </div>
-            </div>
-          </div>
-      </div>
-      <div class="container-fluid">
-          <div class="step2" style="position: relative; top: 10px; display: none;">
-            <div class="card text-white bg-secondary" style="margin: auto; width: fit-content; padding: 10px;">
-              <div class="card-body">
-                <h4 class="card-title">Please select a Day</h4>
-                <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
-                <button type="button" class="btn btn-primary prev2" style="position: relative; top: 8px;">Previous</button>
-              </div>
-            </div>
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/select2.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="css/scheduler.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">CIS TP - Scheduling System</a>
+    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+      aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></button>
+    <div class="collapse navbar-collapse" id="collapsibleNavId">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Scheduling<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Tutor Login</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="main">
+    <div class="container-fluid">
+      <h1>Hi, Welcome to the CIS Tutoring Program Class Scheduling System</h1>
+      <div class="step1" style="position: relative; top: 15px;">
+        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">Please select a Tutor to start</h4>
+            <select id='selTutor' class="form-control" style='width: auto;'>
+              <option value='0'>Select Tutor</option>
+            </select>
           </div>
         </div>
       </div>
-      <div class="container-fluid">
-        <div class="step3" style="position: relative; top: 10px; display: none;">
-          <div class="card text-white bg-secondary" style="margin: auto; width: fit-content; padding: 10px;">
-            <div class="card-body">
-              <h4 class="card-title">Please select a Time</h4>
-              <select id='selTime' class="form-control" style='width: auto;'>
-                <option value='0'>Select Time</option>
-              </select>
-              <button type="button" class="btn btn-primary prev3" style="position: relative; top: 8px;">Previous</button>
-            </div>
+    </div>
+    <div class="container-fluid">
+      <div class="step2" style="position: relative; top: 10px; display: none;">
+        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">Please select a Day</h4>
+            <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
+            <button type="button" class="btn btn-primary prev2" style="position: relative; top: 8px;">Previous</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="step3" style="position: relative; top: 10px; display: none;">
+        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">Please select a Time</h4>
+            <select id='selTime' class="form-control" style='width: auto;'>
+              <option value='0'>Select Time</option>
+            </select>
+            <button type="button" class="btn btn-primary prev3" style="position: relative; top: 8px;">Previous</button>
           </div>
         </div>
       </div>
     </div>
     <div class="container-fluid">
       <div class="step4" style="position: relative; top: 10px; display: none;">
-        <div class="card text-white bg-secondary" style="margin: auto; width: fit-content; padding: 10px;">
+        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
           <div class="card-body">
             <h4 class="card-title">Please enter your information</h4>
             <div class="container">
@@ -81,38 +82,45 @@
                   <label for="email">Email:</label>
                   <input type="email" class="form-control" id="email" placeholder="Enter your email here">
                 </div>
-                <button type="button" class="btn btn-primary prev4" style="position: relative; top: 8px;">Previous</button>
-                <button type="submit" class="btn btn-primary scheduleClass">Submit</button>
+                <button type="button" class="btn btn-primary prev4"
+                  style="position: relative; top: 8px;">Previous</button>
+                <button type="submit" class="btn btn-primary scheduleClass float-right"
+                  style="position: relative; top: 8px;">Submit</button>
               </form>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="container-fluid">
-    <div class="step5" style="position: relative; top: 10px; display: none;">
-      <div class="card text-white bg-success" style="margin: auto; width: fit-content; padding: 10px;">
-        <div class="card-body">
-          <h4 class="card-title">All Done!</h4>
-          <h5>Appointment successful! You can close this tab</h5>
-          <small>If you have any question feel free to contact our officer</small>
-          <h3></h3>
-          <a name="addEvent" id="addEvent" class="btn btn-primary" href="#" role="button">Add to Google Calendar</a>
+    <div class="container-fluid">
+      <div class="step5" style="position: relative; top: 10px; display: none;">
+        <div class="card text-white bg-success" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">All Done!</h4>
+            <h5>Appointment successful! You can close this tab</h5>
+            <small>If you have any question feel free to contact our officer</small>
+            <h3></h3>
+            <a name="addEvent" id="addEvent" class="btn btn-primary" href="#" role="button">Add to Google Calendar</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.8.0/dist/av-min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="js/select2.min.js"></script>
     <script src="js/scheduling.js"></script>
-  </body>
+</body>
+
 </html>
