--- a/manage.html
+++ b/manage.html
@@ -69,7 +69,7 @@
             <div class="d-flex flex-column" style="margin-top: 20px;">
                 <div class="d-flex justify-content-start">
                     <p class="text-muted h6 mt-auto pr-2">Enable Scheduling: </p>
-                    <input id="systemToggle" class="form-check-input" type="checkbox" data-toggle="toggle" data-size="sm" checked disabled>
+                    <input id="systemToggle" class="form-check-input" type="checkbox" data-toggle="toggle" data-size="sm">
                 </div>
                 <div class="d-flex justify-content-start mt-1">
                     <p class="text-muted h6 mt-auto pr-2">Custom Unavailable Days: </p>
