--- a/manage.html
+++ b/manage.html
@@ -133,6 +133,11 @@
                             <input type="text" class="form-control" name="rn" id="rn" placeholder="Discord Room Number"
                                 required>
                         </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" class="form-control" name="email" id="email" placeholder="Email"
+                                required>
+                        </div>
                         <button type="submit" class="btn btn-primary col-12">Register</button>
                     </form>
                 </div>
