--- a/manage.html
+++ b/manage.html
@@ -91,7 +91,7 @@
                                     </button>
                             </div>
                             <div class="modal-body">
-                                Are You Sure? All the classes will be removed from the list!
+                                Are You Sure? All the classes will be remove!
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
