--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <a class="nav-link" href="login.html">Tutor Login</a>
         </li>
       </ul>
+      <ul class="navbar-nav navbar-right">
+        <a class="nav-link gotoCn" href="index_cn.html">中文 >>></a>
+      </ul>
     </div>
   </nav>
   <div class="main">
@@ -97,7 +100,7 @@
         <div class="card text-white bg-success" style="margin: auto; width: fit-content; padding: 10px;">
           <div class="card-body">
             <h4 class="card-title">All Done!</h4>
-            <h5>Appointment successful! You can close this tab</h5>
+            <h5>Appointment successful! You can close this tab or refresh this page to select another class</h5>
             <small>If you have any question feel free to contact our officer</small>
             <h3></h3>
             <a name="addEvent" id="addEvent" class="btn btn-primary" href="#" role="button">Add to Google Calendar</a>
