--- a/index_cn.html
+++ b/index_cn.html
@@ -50,7 +50,7 @@
       <div class="step2" style="position: relative; top: 10px; display: none;">
         <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
           <div class="card-body">
-            <h4 class="card-title">選擇您想要上課的日子</h4>
+            <h4 class="card-title">選擇您想要上課的日期</h4>
             <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
             <button type="button" class="btn btn-primary prev2" style="position: relative; top: 8px;">返回</button>
           </div>
