--- a/manage.html
+++ b/manage.html
@@ -134,7 +134,7 @@
     </div>
     <div class="userTab" style="display: none;">
         <div class="container-fluid" style="position: relative; top: 70px;">
-            <div class="card text-white bg-info">
+            <div class="card text-dark bg-white">
                 <div class="card-body">
                     <h4 class="card-title">Tutor Register</h4>
                     <form id="form-register">
@@ -171,6 +171,9 @@
                     </form>
                 </div>
             </div>
+            <hr />
+            <button type="button" name="listTutor" id="listTutor" class="btn btn-warning" btn-lg btn-block">List All Tutor</button>
+            <div class="ListAllTutor"></div>
         </div>
     </div>
     <div class="tuteeTab" style="display: none;">
