--- a/manage.html
+++ b/manage.html
@@ -174,6 +174,25 @@
             <hr />
             <button type="button" name="listTutor" id="listTutor" class="btn btn-warning" btn-lg btn-block">List All Tutor</button>
             <div class="ListAllTutor"></div>
+            <div class="modal fade" id="deleteTutor" tabindex="-1" role="dialog" aria-labelledby="deleteTutor" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Delete Tutor</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                        </div>
+                        <div class="modal-body" id="rmModal">
+                            
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary confirm">Confirm</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="tuteeTab" style="display: none;">
