--- a/index_cn.html
+++ b/index_cn.html
@@ -38,7 +38,7 @@
       <div class="step1" style="position: relative; top: 15px;">
         <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
           <div class="card-body">
-            <h4 class="card-title">請選擇一位導師來開始</h4>
+            <h4 class="card-title">請選擇一位導師</h4>
             <select id='selTutor' class="form-control" style='width: auto;'>
               <option value='0'>選擇導師</option>
             </select>
