--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </li>
       </ul>
       <ul class="navbar-nav navbar-right">
-        <a class="nav-link gotoCn" href="index_cn.html">中文 >>></a>
+        <a class="nav-link gotoCn" href="#">中文 >>></a>
       </ul>
     </div>
   </nav>
