--- a/index_cn.html
+++ b/index_cn.html
@@ -27,7 +27,7 @@
         </li>
       </ul>
       <ul class="navbar-nav navbar-right">
-        <a class="nav-link gotoEn" href="index.html">English >>></a>
+        <a class="nav-link gotoEn" href="#">English >>></a>
       </ul>
     </div>
   </nav>
