--- a/index_cn.html
+++ b/index_cn.html
@@ -34,7 +34,7 @@
   <div class="main">
     <div class="container-fluid">
       <div class="login" style="position: relative; top: 15px; display: none;">
-        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
+        <div class="card text-dark bg-white" style="width: fit-content; padding: 10px; margin: auto;">
           <div class="card-body">
             <h4 class="card-title">Tutee Login</h4>
             <form id="form-login" method="GET">
