--- a/manage.html
+++ b/manage.html
@@ -266,12 +266,37 @@
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                         </div>
-                        <div class="modal-body" id="rmModal">
-                            
-                        </div>
+                        <div class="modal-body" id="rmModal"></div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                             <button type="button" class="btn btn-primary confirm">Confirm</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="schechduleList" tabindex="-1" role="dialog" aria-labelledby="tutorSchechdule" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title tutorScheduleTitle"></h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                        </div>
+                        <div class="modal-body">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>StartTime</th>
+                                        <th>Tutee</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="listClasses"></tbody>
+                            </table>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
                         </div>
                     </div>
                 </div>
