--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
           <div class="card-body">
             <h4 class="card-title">Please select a Tutor</h4>
+            <small class="card-title">Tutors information：<a href="https://docs.google.com/spreadsheets/d/1leGYA1fjxfZl4onhKxeOH4slWGWTnZc8S4b1dDnAEYI/edit?usp=sharing">Google Sheet</a></small>
             <select id='selTutor' class="form-control" style='width: auto;'>
               <option value='0'>Select Tutor</option>
             </select>
