--- a/index_cn.html
+++ b/index_cn.html
@@ -36,7 +36,7 @@
       <div class="login" style="position: relative; top: 15px; display: none;">
         <div class="card text-dark bg-white" style="width: fit-content; padding: 10px; margin: auto;">
           <div class="card-body">
-            <h4 class="card-title">Tutee Login</h4>
+            <h4 class="card-title">學生登錄</h4>
             <form id="form-login" method="GET">
               <div class="loginError" style="display: none;">
                   <div class="alert alert-warning" role="alert">
@@ -46,17 +46,17 @@
               <div class="form-group">
                   <label for="Email">郵箱</label>
                   <input type="text" class="form-control" name="email" id="email"
-                      placeholder="Enter Your Email" required autofocus>
+                      placeholder="輸入你的郵箱" required autofocus>
               </div>
               <div class="form-group">
                   <label for="pass">密碼</label>
-                  <input type="password" class="form-control" name="pass" id="pass" placeholder="Enter Your Password"
+                  <input type="password" class="form-control" name="pass" id="pass" placeholder="輸入你的密碼"
                       required>
               </div>
               <div class="form-check">
                 <label class="form-check-label">
                   <input type="checkbox" class="form-check-input" name="rememberEmail" id="rememberEmail" value="checkedValue">
-                  記住郵箱
+                  記住帳號
                 </label>
               </div>
               <button type="submit" class="btn btn-primary col-12 mt-2">登錄</button>
