--- a/cancel.html
+++ b/cancel.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">CIS TP - Scheduling System</a>
+        <a class="navbar-brand" href="#">CIS TP - Schedule System</a>
         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
@@ -30,8 +30,8 @@
           <div class="card text-white bg-success" style="width: fit-content; margin: auto; width: 50%; padding: 10px;">
             <div class="card-body">
               <h4 class="card-title">Class Cancelled!</h4>
-              <h5>Class had been cancelled! You can close this tab</h5>
-              <small>If you cancel this class by accident, you can go <a href="index.html">here</a> to reschedule this class</small>
+              <h5>Class had been cancelled successfully! You can close this tab now.</h5>
+              <small>If you cancel this class by accident, you can go <a href="index.html">here</a> to reschedule this class.</small>
             </div>
           </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="card-body">
               <h4 class="card-title">Error!</h4>
               <h5>Unable to find this class</h5>
-              <small>If you can't cancel a class that you scheduled. Please contact our officers for help.</small>
+              <small>Please contact our officers for help if you can not cancel a class that you had scheduled.</small>
             </div>
           </div>
         </div>
