--- a/index_cn.html
+++ b/index_cn.html
@@ -138,10 +138,10 @@
         <div class="card text-white bg-success" style="margin: auto; width: fit-content; padding: 10px;">
           <div class="card-body">
             <h4 class="card-title">完成了!</h4>
-            <h5>預約成功了! 您可以關閉此頁面或刷新此頁面即可再次預約其他課程</h5>
-            <small>如果您有任何問題，歡迎您隨時聯繫我們</small>
+            <h5>您已經預約成功了! 關閉此頁面或刷新此頁面即可再次預約其他課程。</h5>
+            <small>如果您有任何問題，歡迎您隨時聯繫我們。</small>
             <h3></h3>
-            <a name="addEvent" id="addEvent" class="btn btn-primary" href="#" role="button">加入本課程到您的 Google Calendar</a>
+            <a name="addEvent" id="addEvent" class="btn btn-primary" href="#" role="button">將本課程加入到 Google Calendar</a>
           </div>
         </div>
       </div>
