--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <script type="text/javascript">window.location.href="http://104.179.213.255:8080";</script>
+  <script type="text/javascript">window.location.href="http://tp.sfcis.org:8080";</script>
 </body>
 
 </html>
